--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "homepage": "https://github.com/amadridlar/Jest_Prueba#readme",
   "scripts": {
-    "test": "jest"
+    "test": "jest --config=jest.config.js"
   },
-  "dependencies": {},
   "devDependencies": {
     "jest": "^22.4.4"
   }
